--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="md:w-1/2 mt-12 md:mt-0 flex justify-center">
                     <div class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-primary shadow-xl">
-                        <img src="agam.webp&auto=format&fit=crop&w=774&q=80" 
+                        <img src="agam.webp" 
                              alt="Profile Picture" 
                              class="w-full h-full object-cover">
                     </div>
