--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
                         <span class="px-3 py-1 bg-emerald-100 text-primary rounded-full text-sm">Cloud Computing</span>
                         <span class="px-3 py-1 bg-emerald-100 text-primary rounded-full text-sm">AI</span>
                         <span class="px-3 py-1 bg-emerald-100 text-primary rounded-full text-sm">Network Security</span>
-                        <span class="px-3 py-1 bg-emerald-100 text-primary rounded-full text-sm">Ethical Hacking</span>
+                        <span class="px-3 py-1 bg-emerald-100 text-primary rounded-full text-sm">Cyber security</span>
                         <span class="px-3 py-1 bg-emerald-100 text-primary rounded-full text-sm">Blog Writing</span>
                         <span class="px-3 py-1 bg-emerald-100 text-primary rounded-full text-sm">SEO</span>
-                        <span class="px-3 py-1 bg-emerald-100 text-primary rounded-full text-sm">Content Strategy</span>
+                        <span class="px-3 py-1 bg-emerald-100 text-primary rounded-full text-sm">HTML5 & CSS & JS</span>
                     </div>
                 </div>
             </div>
