--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                                 </div>
                                 <div>
                                     <p class="text-sm text-gray-500">Email</p>
-                                    <a href="mailto:agamriyandana7@gmail.com" class="text-gray-800 font-medium hover:text-primary transition-colors">hello@example.com</a>
+                                    <a href="mailto:agamriyandana7@gmail.com" class="text-gray-800 font-medium hover:text-primary transition-colors">agamriyandana7@gmail.com</a>
                                 </div>
                             </div>
                             
@@ -528,7 +528,7 @@
                                 </div>
                                 <div>
                                     <p class="text-sm text-gray-500">Telepon</p>
-                                    <a href="tel:+62" class="text-gray-800 font-medium hover:text-primary transition-colors">+1 (234) 567-890</a>
+                                    <a href="tel:+62" class="text-gray-800 font-medium hover:text-primary transition-colors">+62</a>
                                 </div>
                             </div>
                             
