--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         
         <!-- Copyright and links -->
         <div class="flex flex-col md:flex-row justify-between items-center">
-            <p class="text-gray-400">&copy; <span id="current-year"></span> My Portfolio. All rights reserved.</p>
+            <p class="text-gray-400">&copy; <span id="current-year"></span> Agam Riyandana. All Rights Reserved.</p>
             <div class="mt-4 md:mt-0">
                 <a href="#" class="text-gray-400 hover:text-white transition-colors">Privacy Policy</a>
                 <span class="mx-2 text-gray-600">|</span>
