--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         </div>
                         <h3 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4">Agam Riyandana</h3>
                         <p class="text-gray-600 mb-6">
-                            Content creator dan tech enthusiast yang fokus pada bidang SEO dan keamanan cyber. Berbagi pengetahuan melalui konten informatif yang mudah dipahami untuk membantu meningkatkan kehadiran online Anda secara aman dan optimal.
+                            Content creator dan Berbagi pengetahuan melalui konten informatif yang mudah dipahami untuk membantu meningkatkan kehadiran online Anda secara aman dan optimal.
                         </p>
                         
                         <div class="mt-auto">
