--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                                     <!-- Reply -->
                                     <div class="mt-4 ml-6 flex space-x-4">
                                         <div class="w-8 h-8 rounded-full overflow-hidden flex-shrink-0">
-                                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fA%3D%3D&auto=format&fit=crop&w=100&q=80" alt="Author" class="w-full h-full object-cover">
+                                            <img src="agam.webp" alt="Author" class="w-full h-full object-cover">
                                         </div>
                                         <div>
                                             <div class="flex items-center">
