--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container max-w-xl w-full">
         <div class="flex flex-col items-center mb-8">
             <div class="w-24 h-24 sm:w-28 sm:h-28 md:w-32 md:h-32 rounded-full border-3 border-red-600 overflow-hidden mb-4">
-                <img src="agam.webp&auto=format&fit=crop&w=800&q=80" 
+                <img src="agam.webp" 
                      alt="Agam Riyandana Profile Picture" 
                      class="w-full h-full object-cover">
             </div>
