--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <span class="font-medium">My Online Store</span>
             </a>
             <a href="#" class="flex items-center p-3 sm:p-4 rounded-lg text-white bg-gray-800 hover:bg-gray-700 transition-all hover:-translate-y-1 duration-300 shadow-lg hover:shadow-orange-500/30">
-                <i class="fas fa-youtube text-xl sm:text-2xl w-8 sm:w-10 text-center text-orange-500"></i>
+                <i class="fab fa-youtube text-xl sm:text-2xl w-8 sm:w-10 text-center text-orange-500"></i>
                 <span class="font-medium">Listen to My YouTube</span>
             </a>
             <a href="mailto:agamriyandana7@gmail.com" class="flex items-center p-3 sm:p-4 rounded-lg text-white bg-gray-800 hover:bg-gray-700 transition-all hover:-translate-y-1 duration-300 shadow-lg hover:shadow-yellow-500/30">
