--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     // Detect connection speed and load appropriate media quality
     function detectConnectionAndLoadMedia() {
       const connection = navigator.connection || navigator.mozConnection || navigator.webkitConnection;
-      const highQualityImage = 'https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Screenshot_2025-04-08-18-22-08-752-edit_com.instagram.android.jpg-BJTcOJMv4rYBx2qQKeBYxER0oUNSKd.jpeg';
+      const highQualityImage = 'agam.webp';
       
       // If on slow connection, could load a lower quality image
       if (connection && (connection.effectiveType === '2g' || connection.effectiveType === 'slow-2g')) {
