--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         img.src = mediaUrl;
         img.className = 'cover-media';
         img.id = 'cover-image';
-        img.alt = 'Bobon Santoso Cover Photo';
+        img.alt = 'Agam Riyandana Cover Photo';
         img.onload = function() {
           container.classList.remove('image-loading');
         };
