--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <nav class="w-full space-y-3 sm:space-y-4 mb-6 sm:mb-8">
       <!-- CONTACT MANAGER BUTTON: Replace the href value with your actual contact link -->
       <a 
-        href="https://mailto:agamriyandana7@gmail.com" 
+        href="mailto:agamriyandana7@gmail.com" 
         id="contact-manager-link"
         class="block w-full py-2.5 sm:py-3 md:py-3.5 px-4 bg-gray-200 text-gray-800 font-medium rounded-full text-center text-sm sm:text-base transition-all hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50"
         aria-label="Contact Manager"
