--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <i data-lucide="instagram" class="w-5 h-5 sm:w-6 sm:h-6"></i>
       </a>
       <a 
-        href="https://tiktok.com/@bobonsantoso" 
+        href="https://www.facebook.com/agamriyandana.id" 
         target="_blank" 
         rel="noopener noreferrer" 
         class="w-10 h-10 sm:w-12 sm:h-12 flex items-center justify-center rounded-full bg-gray-200 text-black hover:bg-gray-300 transition-colors focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50" 
