--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!-- SEO Meta Tags -->
   <meta name="description" content="Connect with Agam Riyandana, Kreator Digital Indonesia. Find contact information, contribution opportunities, and social media profiles.">
-  <meta name="keywords" content="Bobon Santoso, Kreator Digital Indonesia, Indonesian Chef, Food, Culinary, Contact">
+  <meta name="keywords" content="Agam Riyandana, Kreator Digital Indonesia, Indonesian Chef, Food, Culinary, Contact">
   <meta name="author" content="Agam Riyandana">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://agamriyandana.my.id">
