--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://jsc.mgid.com/site/908419.js" async> 
+ </script> 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Agam Riyandana - Kreator Digital Indonesia | Official Biolink</title>
@@ -301,6 +303,11 @@
         MY ONLINE STORE
       </a>
     </nav>
+
+ <div data-type="_mgwidget" data-widget-id="1559055"> 
+ </div> 
+ <script>(function(w,q){w[q]=w[q]||[];w[q].push(["_mgc.load"])})(window,"_mgq"); 
+ </script>
     
     <!-- Social Media Icons - Using Lucide icons -->
     <section class="social-icons">
