--- a/index.html
+++ b/index.html
@@ -304,10 +304,11 @@
       </a>
     </nav>
 
- <div data-type="_mgwidget" data-widget-id="1559055"> 
- </div> 
- <script>(function(w,q){w[q]=w[q]||[];w[q].push(["_mgc.load"])})(window,"_mgq"); 
- </script>
+     <style> div[data-widget-id="1710875"] { min-height: 300px; } </style> 
+     <div data-type="_mgwidget" data-widget-id="1710875"> 
+     </div> 
+     <script>(function(w,q){w[q]=w[q]||[];w[q].push(["_mgc.load"])})(window,"_mgq"); 
+     </script> 
     
     <!-- Social Media Icons - Using Lucide icons -->
     <section class="social-icons">
