--- a/index.html
+++ b/index.html
@@ -272,14 +272,14 @@
     <!-- Profile Section with Semantic HTML -->
     <section class="profile">
       <h1 class="profile-name">Agam Riyandana</h1>
-      <p class="profile-title">Kreator Digital INDONESIA</p>
+      <p class="profile-title">Kreator Digital</p>
     </section>
     
     <!-- Link Buttons with Icons -->
     <nav class="nav">
       <!-- CONTACT MANAGER BUTTON with icon -->
       <a 
-        href="mailto:admin@agamriyandana.my.id" 
+        href="mailto:hi@agamofficial.my.id" 
         id="contact-manager-link"
         class="btn"
         target="_blank"
