--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
   <meta name="twitter:image" content="https://agamofficial.my.id/agam.webp">
   
   <!-- Tailwind CSS via CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     tailwind.config = {
       theme: {
         extend: {
