--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="tailwind.config.js">
+  <link rel="stylesheet" href="tailwind.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <title>Agam Riyandana | Official Biolink</title>
   
   <!-- SEO Meta Tags -->
@@ -33,30 +34,6 @@
   <meta name="twitter:description" content="Connect with Agam Riyandana, Kreator Digital Indonesia. Find contact information, contribution opportunities, and social media profiles.">
   <meta name="twitter:image" content="https://agamofficial.my.id/agam.webp">
   
-  
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            // You can easily change these colors to customize your theme
-            primary: {
-              bg: '#000000',      // Background color (currently black)
-              text: '#ffffff',    // Primary text color (currently white)
-            },
-            secondary: {
-              text: '#a0a0a0',    // Secondary text color (currently light gray)
-            },
-            button: {
-              bg: '#e5e7eb',      // Button background (currently light gray)
-              text: '#1f2937',    // Button text (currently dark gray)
-              hover: '#d1d5db',   // Button hover background
-            }
-          }
-        }
-      }
-    }
-  </script>
   
   <!-- Structured Data for SEO -->
   <script type="application/ld+json">
