--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <meta name="keywords" content="Agam Riyandana, Kreator Rakyat Indonesia, Indonesian, Contact, myid, pandi">
   <meta name="author" content="Agam Riyandana">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://agamriyandana.my.id/">
+  <link rel="canonical" href="https://agamofficial.my.id/">
   
   <!-- Performance: Preload critical assets -->
-  <link rel="preload" as="image" href="https://agamriyandana.my.id/agam.webp" fetchpriority="high">
+  <link rel="preload" as="image" href="https://agamofficial.my.id/agam.webp" fetchpriority="high">
   
   <!-- Performance: Preconnect to CDN domain -->
   <link rel="preconnect" href="https://cdn.jsdelivr.net">
@@ -22,15 +22,15 @@
   <meta property="og:type" content="profile">
   <meta property="og:title" content="Agam Riyandana - Kreator Digital Indonesia">
   <meta property="og:description" content="Connect with Agam Riyandana, Kreator Digital Indonesia. Find contact information, contribution opportunities, and social media profiles.">
-  <meta property="og:image" content="https://agamriyandana.my.id/agam.webp">
-  <meta property="og:url" content="https://agamriyandana.my.id/">
+  <meta property="og:image" content="https://agamofficial.my.id/agam.webp">
+  <meta property="og:url" content="https://agamofficial.my.id/">
   <meta property="og:site_name" content="Agam Riyandana Official">
   
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Agam Riyandana - Kreator Digital Indonesia">
   <meta name="twitter:description" content="Connect with Agam Riyandana, Kreator Digital Indonesia. Find contact information, contribution opportunities, and social media profiles.">
-  <meta name="twitter:image" content="https://agamriyandana.my.id/agam.webp">
+  <meta name="twitter:image" content="https://agamofficial.my.id/agam.webp">
   
   <!-- Performance optimization: Inline critical CSS -->
   <style>
@@ -241,13 +241,13 @@
       "@type": "Person",
       "name": "Agam Riyandana",
       "jobTitle": "Kreator Digital Indonesia",
-      "url": "https://agamriyandana.my.id",
+      "url": "https://agamofficial.my.id/",
       "sameAs": [
         "https://www.instagram.com/realagam1/",
         "https://www.facebook.com/agamriyandana.id",
         "https://youtube.com/@agam_riyandana"
       ],
-      "image": "https://agamriyandana.my.id/agam.webp"
+      "image": "https://agamofficial.my.id/agam.webp"
     }
   </script>
 </head>
