--- a/vat-calculator.html
+++ b/vat-calculator.html
@@ -130,11 +130,11 @@
     <footer class="bg-nextjs-dark text-nextjs-light p-4">
         <div class="container mx-auto flex justify-center items-center">
             <div>
-                <p class="mb-2" id="follow-us-text">Follow us on social media:</p>
+                <p class="mb-2" id="follow-us-text">Follow Us On Social Media:</p>
                 <div class="flex justify-center space-x-4">
                     <a href="#" class="text-nextjs-light hover:text-gray-300" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="text-nextjs-light hover:text-gray-300" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="text-nextjs-light hover:text-gray-300" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://agamofficial.my.id/" class="text-nextjs-light hover:text-gray-300" aria-label="Website"><i class="fab fa-globe-pointer"></i></a>
+                    <a href="https://www.instagram.com/realagam1/" class="text-nextjs-light hover:text-gray-300" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="#" class="text-nextjs-light hover:text-gray-300" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
